Fri Feb 27 02:00:34 2004  Matthias Clasen  <maclas@gmx.de>

	* acglib.m4: quote AC_DEFUN macro names so automake
	1.8 won't whine at us.  (#134882)

Fri Feb 27 01:44:41 2004  Matthias Clasen <maclas@gmx.de>

	* glib/gdate.c: Translate from locale era to AD in 
	g_date_set_parse().  (#133400, Theppitak Karoonboonyanan)

Fri Feb 27 00:46:29 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.c (g_strerror): Don't modify errno.  (#116617, 
	Balazs Scheidler)

2004-02-26  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gatomic.h: Fix the !G_THREADS_ENABLED case.

	* tests/child-test.c (main): Only run, if threads are enabled.

	* glib/gatomic.h: empty G_ATOMIC_MEMORY_BARRIER() definition for
	!G_THREADS_ENABLED

	* glib/gthread.h: Define g_once and
	g_static_mutex_get_mutex_impl_shortcut in terms of
	G_MEMORY_BARRIER, if defined and if we can inline.

	* configure.in: Remove double checked locking feature check.

	* configure.in, config.h.win32.in, glib/gthread.c: Removed the PID
	niceness surrogate for thread priorities as requested by Tim. It
	does more harm than good.

	* glib/gatomic.c, glib/gatomic.h: New files to implement atomic
	operations for different platforms. Fixes bug #63621.

	* glib/glib.h: Include gatomic.h.

	* configure.in: Add test for assembler routines for atomic operations.

	* glib/Makefile.am: Add gatomic.c, gatomic.h.

	* tests/Makefile.am, tests/atomic-test.c: Unit test for atomic
	operations.

2003-02-26  Hans Breuer  <hans@breuer.org>

	* glib/glib.def : added g_hash_table_find and a
	bunch of g_queue_*

	* glib/gmain.c : make it compile on win32, 
	child_wake_up_pipe replaced by semaphore like it is done
	for the other wake_up_pipe

	* config.h.win32.in : added HAVE_INT64_AND_I64
	* glibconfig.h.win32.in : G_MAXSIZE .. G_M??INT64,
	and typedef for GPid

	* test/env-test.c : don't let the local log function
	collide in namespace with standard C

2004-02-25  Sebastian Wilhelmi  <seppi@seppi.de>
